      about adding window entry event handling

**************************************************************************
* Changes in early May 2005 -- in the run-up to 2.4.0
**************************************************************************
(253) Added handling for negative position specifications for subwindows

(254) Made the display string handling in "freeglut_init.c" ever so slightly
      more general

(255) Changed the key repeat flag initialization from "GL_TRUE" to
      "GLUT_KEY_REPEAT_ON" to make it consistent with its use elsewhere.

(256) Removed the unused joystick function "fghJoystickParseElement"

(257) Added a comment to "glutCreateWindow" about why "freeglut" does not
      match GLUT when "glutInit" is not called.

(258) Removed an unused "Pixmap" variable

(259) Changed the "shapes" demo to the OpenGLUT "shapes" demo, which is much
      niftier.

(260) Necessary compilation fixes for newer GCCs (e.g. 3.3.5, 4.0).
      Side effect: The shapes demo has a new 'i' key now.

(261) Fixed a cuboctahedron vertex, implemented wire mode for that shape.

**************************************************************************
* 8 May 2004 -- 2.4.0 Release Candidate 1 Released
**************************************************************************
(262) Fixed the "vfprintf" for Windows so that error messages get printed
      out again

(263) Implemented Takeshi Nishimura's menu fixes.  Menus should work now.

**************************************************************************
* 15 May 2004 -- 2.4.0 Release Candidate 2 Released
**************************************************************************

(264) More game mode fixes

**************************************************************************
* 19 May 2004 -- 2.4.0 Release Candidate 3 Released
**************************************************************************

(265) Lowering minimum autoconf version required.